[package]
name = "daisyretro"
version = "0.1.0"
authors = ["Yuxiang Zhu <vfreex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
lazy_static = "1.4.0"
rand = "0.8.0"
bitflags = "1.2"
log = "0.4.0"
env_logger = "0.8.3"

[build-dependencies]
